<resources>
    <string name="app_name">Pandemic</string>
    <string name="home">Home</string>
    <string name="countries">Countries</string>
    <string name="profile">Profile</string>
    <string name="link1"><a href="https://corona.lmao.ninja/">API: 1</a></string>
    <string name="link2"><a href="https://covid19api.herokuapp.com/">API: 2</a></string>
    <string name="link3"><a href="http://github.com/AlokRanjanSingh4">GitHub</a></string>
    <string name="link4"><a href="http://linkedin.com/in/alok-ranjan-singh-b7847a17a">LinkedIn</a></string>

    <string name="job_success">Job Success</string>
    <string name="ui_ux_designer">UI/UX Designer</string>
    <string name="my_desc"> I try to solve problems with my skills. Software developer looking to leverage my passion for problem-solving and algorithm design into an engineering role that allows me to create engaging products and user experiences. Skilled in Java, C++, Python &amp; Android Application Development. </string>
    <string name="about_me">About Me</string>
    <string name="contact">Contact</string>
    <string name="skills">Skills</string>
    <string name="ratings">Star Ratings</string>
    <string name="samplereview">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium bibendum sapien, ut euismod massa. Duis convallis sem sed turpis elementum auctor.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="covid_19_pandemic">COVID - 19 Pandemic</string>
    <string name="total_death">Total Death</string>

    <style name="BottomNavigationView">
        <item name="fontFamily">@font/poppins</item>
        <item name="android:textSize">10sp</item>
        <item name="android:textColor">#fff</item>
    </style>


    <style name="LabelFontStyle">
        <item name="fontFamily">@font/poppins</item>
        <item name="android:textSize">14sp</item>
    </style>

    <style name="TotalFontStyle">
        <item name="fontFamily">@font/poppins_bold</item>
        <item name="android:textSize">36sp</item>
    </style>
</resources>
