<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    app:cnb_unselectedColor="#fff"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        app:cnb_backgroundColor="#ff785b"
        app:cnb_iconColor="#fff"
        app:cnb_textColor="#fff"
        android:title="@string/home" />

    <item
        android:id="@+id/countries"
        android:icon="@drawable/ic_country"
        app:cnb_backgroundColor="#ff785b"
        app:cnb_iconColor="#fff"
        app:cnb_textColor="#fff"
        android:title="@string/countries" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        app:cnb_backgroundColor="#ff785b"
        app:cnb_iconColor="#fff"
        app:cnb_textColor="#fff"
        android:title="@string/profile" />
</menu>