<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fcfcfc"
    tools:context=".ProfileFragment">

    <RelativeLayout
        android:background="#1F1B24"
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/covid_19_pandemic"
            android:textColor="#fcfcfc"
            android:textSize="24sp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@id/text"
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/top_r">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="184dp"
            android:src="@drawable/corona"
            android:scaleType="centerInside"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lisnks"
        android:layout_marginTop="34dp"
        android:layout_below="@id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:background="#1F1B24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:text="Credits"
                    android:paddingLeft="8dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/nunito_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/link1"
                    android:textSize="16sp"
                    android:fontFamily="@font/nunito_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/link1"
                    android:textSize="16sp"
                    android:fontFamily="@font/nunito_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>



        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <RelativeLayout
        android:background="#1F1B24"
        android:layout_marginTop="24dp"
        android:layout_below="@id/lisnks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:background="#1F1B24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:text="Information"
                    android:paddingLeft="8dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/nunito_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/link3"
                    android:textSize="16sp"
                    android:fontFamily="@font/nunito_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/link4"
                    android:textSize="16sp"
                    android:fontFamily="@font/nunito_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>



        </androidx.cardview.widget.CardView>

    </RelativeLayout>


</RelativeLayout>

